customerAPI/1.2.0/62356abc010b455685da2e39efb308a2f46a4389-production-httproute-1.yaml
---
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "62356abc010b455685da2e39efb308a2f46a4389-production-httproute-1"
  labels:
    api-name: "db24dd82f4d08df536b81fd945553a0029e8fe5a"
    api-version: "91e95be6b6634e3c21072dfcd661146728694326"
    organization: "2e14f1a627e0f7388df2efa85fba6816ac25f094"
    managed-by: "apk"
spec:
  hostnames:
  - "carbon.super.gw.wso2.com"
  rules:
  - matches:
    - path:
        type: "RegularExpression"
        value: "/customers"
      method: "GET"
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          type: "ReplaceFullPath"
          replaceFullPath: "/customers"
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-7456522536fb2b689c1a8cf47b4cac765c206145-api"
  parentRefs:
  - group: "gateway.networking.k8s.io"
    kind: "Gateway"
    name: "wso2-apk-default"
    sectionName: "httpslistener"
